# NRF24_1

./: CLI_REFERENCE.md  CMakeLists.txt  README.md  eim_config.toml  env.sh  flash.sh  partitions.csv  pytest_blink.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.defaults.release  sdkconfig.defaults.tutorial
.claude/: settings.json
build_rx/: .bin_timestamp  .ninja_deps  .ninja_log  app-flash_args  build.ninja  config.env  flash_args  flasher_args.json  flasher_args.json.in  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_rx/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  build.ninja  config.env  project_description.json
build_rx/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_rx/gdbinit/: gdbinit  symbols
build_rx/log/: idf_py_stderr_output_20344  idf_py_stderr_output_28040  idf_py_stderr_output_31884  idf_py_stderr_output_33484  idf_py_stdout_output_16252  (+6 more)
build_tx/: .bin_timestamp  .ninja_deps  .ninja_log  build.ninja  config.env  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
docs/: CODE_DEEP_DIVE.md  CODE_WALKTHROUGH.md  C_LANGUAGE_PRIMER.md  README.md  START_HERE.md  advanced.md  ble_mobile_control.md  c-primer-01-types-and-memory.md  c-primer-02-bit-operations-and-preprocessor.md  c-primer-03-control-flow-and-error-handling.md  c-primer-04-function-pointers-and-concurrency.md  c-primer-05-freertos-tasks-and-queues.md  c-primer-06-protocol-and-esp-idf.md  debug-playbook.md  nrf24_rpd_register.md  nrf24_tx_rx_phy_mac_mindmap.md  pc_gui_workflow.md  quickstart.md  vscode-workflow.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  app_control.c  app_control.h  app_main.c  app_pin_test.c  app_pin_test.h  app_proto.c  app_proto.h  app_rx.c  app_rx.h  app_stats.c  app_stats.h  app_tx.c  app_tx.h  app_wifi_control.c  app_wifi_control.h  ble_ctrl.c  ble_ctrl.h  nrf24.c  nrf24.h
tools/: pc_nrf24_controller.py  tempCodeRunnerFile.py
(+60 files in other folders)
